<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ad3bc"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="My Tasks"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userNameSignedInText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="Test"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="149dp"
                    android:layout_marginTop="10dp"
                    android:background="#f3eac2"
                    android:src="@android:drawable/ic_menu_crop"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:background="#f5b461"
                    android:layout_marginTop="10dp"
                    android:text="Welcome"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#070707"
                    android:textDirection="anyRtl" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f3eac2"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addTaskButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#ec524b"
                        android:onClick="renderAddTaskView"
                        android:text="add task"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/allTasksButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#ec524b"
                        android:onClick="renderAllTaskView"
                        android:text="all tasks"
                        tools:ignore="MissingConstraints" />

                </LinearLayout>

                <Button
                    android:id="@+id/settingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#ec524b"
                    android:onClick="renderSettingView"
                    android:paddingHorizontal="20dp"
                    android:text="Settings"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/signInButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Sign In" />

                    <Button
                        android:id="@+id/signOutButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Sign Out"
                        android:textAlignment="center" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>